package app.AgeGroup;

public interface AgeGroup {
    enum age{
        CHILD,
        YOUNG,
        ADULT;
    }
}
